# mke_hw

./: CMakeLists.txt  main.cpp  result.mv
include/entities/: AbstractMatrix.h  CsrMatrix.h  DenseMatrix.h  DokMatrix.h  Point3D.h  Vec.h
include/generators/: GlobalEqGen.h  LocalEqGen.h  LupFactor.h
include/mke/: Triangulation.h
include/utils/: Constants.h  Export.h  GlobalIndices.h  Inaccuracy.h  Types.h
src/entities/: AbstractMatrix.cpp  CsrMatrix.cpp  DenseMatrix.cpp  DokMatrix.cpp  Point3D.cpp  Vec.cpp
src/generators/: GlobalEqGen.cpp  LocalEqGen.cpp  LupFactor.cpp
src/mke/: Triangulation.cpp
src/utils/: Export.cpp  Inaccuracy.cpp  SparseSolve.cpp
